--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,5 +1,5 @@
 body {
-    font-familr: "Arial", "Meiryo", sans-serif;
+    font-family: "Arial", "Meiryo", sans-serif;
     text-align: center;
 }
 
@@ -18,11 +18,11 @@ html {
 h1 {
     font-family: "Jost", sans-serif;
     font-size: 2rem;
-    letter-spacing: 1.2rem;
+    letter-spacing: 1.2em;
     text-shadow: 2px 2px 2px grey;
     border-bottom: solid 3px rgb(115, 115, 114);
 }
 
-div {
+#basic {
     font-weight: bold;
 }
