--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -16,13 +16,13 @@ html {
 }
 
 h1 {
-    font-family: "Jost", sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     font-size: 2rem;
     letter-spacing: 1.2em;
     text-shadow: 2px 2px 2px grey;
     border-bottom: solid 3px rgb(115, 115, 114);
 }
 
-#basic {
+.text-weight {
     font-weight: bold;
 }
